--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "eventemitter2": "^6.4.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-joystick-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
